force-app/main/default/objects/Forrester_Case_Sponsor__x/Forrester_Case_Sponsor__x.object-meta.xml
<CustomObject>
    <description>Forrester_Case_Sponsor</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_Case_Sponsor</externalName>
    <label>Forrester_Case_Sponsor</label>
    <pluralLabel>Forrester_Case_Sponsor</pluralLabel>
</CustomObject>