force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/ADDRESS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS_TYPE__c</fullName>
    <description>ADDRESS_TYPE</description>
    <externalDeveloperName>ADDRESS_TYPE</externalDeveloperName>
    <label>ADDRESS_TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>