force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/AFFILIATE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>AFFILIATE_FLAG__c</fullName>
    <description>AFFILIATE_FLAG</description>
    <externalDeveloperName>AFFILIATE_FLAG</externalDeveloperName>
    <label>AFFILIATE_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>