force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/CASE_SPONSOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_SPONSOR_RECID__c</fullName>
    <description>CASE_SPONSOR_RECID</description>
    <externalDeveloperName>CASE_SPONSOR_RECID</externalDeveloperName>
    <label>Case Sponsor Rec ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>