force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/GRANT_CONTRACT_NUMS__c.field-meta.xml
<CustomField>
    <fullName>GRANT_CONTRACT_NUMS__c</fullName>
    <description>GRANT_CONTRACT_NUMS</description>
    <externalDeveloperName>GRANT_CONTRACT_NUMS</externalDeveloperName>
    <label>Grant/Contract # (for Contract docs)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>