force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/IEDISON_GOVT_CONTRACT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>IEDISON_GOVT_CONTRACT_NUMBER__c</fullName>
    <description>IEDISON_GOVT_CONTRACT_NUMBER</description>
    <externalDeveloperName>IEDISON_GOVT_CONTRACT_NUMBER</externalDeveloperName>
    <label>IEDISON_GOVT_CONTRACT_NUMBER</label>
    <length>60</length>
    <type>Text</type>
</CustomField>