force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/INDUSTRIAL_COMPLIANCE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIAL_COMPLIANCE_FLAG__c</fullName>
    <description>INDUSTRIAL_COMPLIANCE_FLAG</description>
    <externalDeveloperName>INDUSTRIAL_COMPLIANCE_FLAG</externalDeveloperName>
    <label>INDUSTRIAL_COMPLIANCE_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>