force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/OSP_PROJECT_NUMS__c.field-meta.xml
<CustomField>
    <fullName>OSP_PROJECT_NUMS__c</fullName>
    <description>OSP_PROJECT_NUMS</description>
    <externalDeveloperName>OSP_PROJECT_NUMS</externalDeveloperName>
    <label>OSP Project # (for SRA)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>