force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/OSP_PROJECT_RECID__c.field-meta.xml
<CustomField>
    <fullName>OSP_PROJECT_RECID__c</fullName>
    <description>OSP_PROJECT_RECID</description>
    <externalDeveloperName>OSP_PROJECT_RECID</externalDeveloperName>
    <label>OSP_PROJECT_RECID</label>
    <length>24</length>
    <referenceTo>Forrester_OSP_Project__x</referenceTo>
    <relationshipLabel>Forrester_Case_Sponsor</relationshipLabel>
    <relationshipName>Forrester_OSP_Project</relationshipName>
    <type>ExternalLookup</type>
</CustomField>