force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/PRIMARY_GOVT_SPONSOR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_GOVT_SPONSOR_FLAG__c</fullName>
    <description>PRIMARY_GOVT_SPONSOR_FLAG</description>
    <externalDeveloperName>PRIMARY_GOVT_SPONSOR_FLAG</externalDeveloperName>
    <label>PRIMARY_GOVT_SPONSOR_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>