force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/SPONSOR_DEC_FILE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_DEC_FILE_DATE__c</fullName>
    <description>SPONSOR_DEC_FILE_DATE</description>
    <externalDeveloperName>SPONSOR_DEC_FILE_DATE</externalDeveloperName>
    <label>SPONSOR_DEC_FILE_DATE</label>
    <type>DateTime</type>
</CustomField>