force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/SPONSOR_NOTIF_DATE__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_NOTIF_DATE__c</fullName>
    <description>SPONSOR_NOTIF_DATE</description>
    <externalDeveloperName>SPONSOR_NOTIF_DATE</externalDeveloperName>
    <label>SPONSOR_NOTIF_DATE</label>
    <type>DateTime</type>
</CustomField>