force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/SPONSOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_RECID__c</fullName>
    <description>SPONSOR_RECID</description>
    <externalDeveloperName>SPONSOR_RECID</externalDeveloperName>
    <label>SPONSOR_RECID</label>
    <length>24</length>
    <referenceTo>Forrester_Sponsor__x</referenceTo>
    <relationshipLabel>Forrester_Case_Sponsor</relationshipLabel>
    <relationshipName>Forrester_Case_Sponsor</relationshipName>
    <type>ExternalLookup</type>
</CustomField>