force-app/main/default/objects/Forrester_Case_Sponsor__x/fields/SPONSOR_REFERENCE__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_REFERENCE__c</fullName>
    <description>SPONSOR_REFERENCE</description>
    <externalDeveloperName>SPONSOR_REFERENCE</externalDeveloperName>
    <label>SPONSOR_REFERENCE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>